welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:9: error: not enough arguments for constructor Array: (_length: Int)Array[Int].
Unspecified value parameter _length.
    var T = new Array[Int]
            ^golomb:10: error: type mismatch;
 found   : String
 required: Array[Int]
    tableau = tableau + T
                      ^