welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var compteur = 2
  var tableau = new Array[Int](3)
  tableau(0) = 1
  tableau(1) = 2
  tableau(2) = 2
  while(compteur<num)
  {
    var T = new Array[Int]
    tableau = tableau + T
    compteur +=1
  }
  return tableau(num-1)
}